crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotation_array_initializer.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@A({1, 2, 3}) class B {}
TOKENS:
AT "@"
IDENTIFIER "A"
L_PAREN "("
L_BRACE "{"
NUMBER_LIT "1"
COMMA ","
WHITESPACE " "
NUMBER_LIT "2"
COMMA ","
WHITESPACE " "
NUMBER_LIT "3"
R_BRACE "}"
R_PAREN ")"
WHITESPACE " "
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "B"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    MODIFIER_LIST
      ANNOTATION
        AT "@"
        QUALIFIED_NAME
          IDENTIFIER "A"
        ANNOTATION_ARGUMENT_LIST
          L_PAREN "("
          ARRAY_INITIALIZER
            L_BRACE "{"
            LITERAL
              NUMBER_LIT "1"
            COMMA ","
            LITERAL
              WHITESPACE " "
              NUMBER_LIT "2"
            COMMA ","
            LITERAL
              WHITESPACE " "
              NUMBER_LIT "3"
            R_BRACE "}"
          R_PAREN ")"
    WHITESPACE " "
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "B"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      R_BRACE "}"
