crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotation_constant.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@interface Limits {
    int MAX_SIZE = 100;
    String DEFAULT_TYPE = "JSON";
}

TOKENS:
AT "@"
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "Limits"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "MAX_SIZE"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
NUMBER_LIT "100"
SEMICOLON ";"
WHITESPACE "\n    "
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "DEFAULT_TYPE"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
STRING_LIT "\"JSON\""
SEMICOLON ";"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  ANNOTATION_TYPE_DECL
    MODIFIER_LIST
    AT "@"
    INTERFACE_KW "interface"
    WHITESPACE " "
    IDENTIFIER "Limits"
    ANNOTATION_TYPE_BODY
      WHITESPACE " "
      L_BRACE "{"
      FIELD_DECL
        MODIFIER_LIST
        TYPE
          WHITESPACE "\n    "
          INT_KW "int"
        VARIABLE_DECLARATOR_LIST
          VARIABLE_DECLARATOR
            WHITESPACE " "
            IDENTIFIER "MAX_SIZE"
            WHITESPACE " "
            EQUAL "="
            ERROR
              WHITESPACE " "
              NUMBER_LIT "100"
        SEMICOLON ";"
      FIELD_DECL
        MODIFIER_LIST
        TYPE
          WHITESPACE "\n    "
          IDENTIFIER "String"
        VARIABLE_DECLARATOR_LIST
          VARIABLE_DECLARATOR
            WHITESPACE " "
            IDENTIFIER "DEFAULT_TYPE"
            WHITESPACE " "
            EQUAL "="
            ERROR
              WHITESPACE " "
              STRING_LIT "\"JSON\""
        SEMICOLON ";"
      WHITESPACE "\n"
      R_BRACE "}"
  WHITESPACE "\n"
