crates/java-syntax/tests/snapshots/parser_snapshots__parse_annotation_type_decl.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
@interface A {}
TOKENS:
AT "@"
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  ANNOTATION_TYPE_DECL
    MODIFIER_LIST
    AT "@"
    INTERFACE_KW "interface"
    WHITESPACE " "
    IDENTIFIER "A"
    ANNOTATION_TYPE_BODY
      WHITESPACE " "
      L_BRACE "{"
      R_BRACE "}"
