crates/java-syntax/tests/snapshots/parser_snapshots__parse_array_initialize_expr.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    String[] STRING_ARRAY = {"a", "b", "c"};
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
IDENTIFIER "String"
L_BRACKET "["
R_BRACKET "]"
WHITESPACE " "
IDENTIFIER "STRING_ARRAY"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
L_BRACE "{"
STRING_LITERAL "\"a\""
COMMA ","
WHITESPACE " "
STRING_LITERAL "\"b\""
COMMA ","
WHITESPACE " "
STRING_LITERAL "\"c\""
R_BRACE "}"
SEMICOLON ";"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "Test"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      FIELD_DECL
        WHITESPACE "\n    "
        TYPE
          QUALIFIED_NAME
            IDENTIFIER "String"
          DIMENSIONS
            DIMENSION
              L_BRACKET "["
              R_BRACKET "]"
        VARIABLE_DECLARATOR_LIST
          WHITESPACE " "
          VARIABLE_DECLARATOR
            IDENTIFIER "STRING_ARRAY"
            WHITESPACE " "
            EQUAL "="
            ARRAY_INITIALIZER
              WHITESPACE " "
              L_BRACE "{"
              LITERAL
                STRING_LITERAL "\"a\""
              COMMA ","
              LITERAL
                WHITESPACE " "
                STRING_LITERAL "\"b\""
              COMMA ","
              LITERAL
                WHITESPACE " "
                STRING_LITERAL "\"c\""
              R_BRACE "}"
        SEMICOLON ";"
      WHITESPACE "\n"
      R_BRACE "}"
  WHITESPACE "\n"
