crates/java-syntax/tests/snapshots/parser_snapshots__parse_array_type_on_declarator.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { int a[]; }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
INT_KW "int"
WHITESPACE " "
IDENTIFIER "a"
L_BRACKET "["
R_BRACKET "]"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT
  CLASS_DECL
    CLASS_KW "class"
    WHITESPACE " "
    IDENTIFIER "A"
    CLASS_BODY
      WHITESPACE " "
      L_BRACE "{"
      FIELD_DECL
        TYPE
          WHITESPACE " "
          INT_KW "int"
        VARIABLE_DECLARATOR_LIST
          VARIABLE_DECLARATOR
            WHITESPACE " "
            IDENTIFIER "a"
            DIMENSIONS
              DIMENSION
                L_BRACKET "["
                R_BRACKET "]"
        SEMICOLON ";"
      WHITESPACE " "
      R_BRACE "}"
